# Claude-Notifier-Bot

./: .gitignore  LICENSE  README.md  devlog.md  pyproject.toml  requirements.txt  run.sh  start-chat.sh  status.sh  stop-chat.sh  stop.sh
claude_notify/: __init__.py  cli.py  config.py  monitor.py
claude_notify/chat/: __init__.py  claude_runner.py  feishu_bot.py  feishu_client.py  session_store.py
claude_notify/notify/: __init__.py  feishu.py
claude_notify/parser/: __init__.py  task_extractor.py
claude_notify/ssh/: __init__.py  connection.py
