[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-notify"
version = "0.1.0"
description = "Claude Code task notification via Feishu"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.scripts]
claude-notify = "claude_notify.cli:main"
